--- a/template1.html
+++ b/template1.html
@@ -55,12 +55,12 @@
             <!--grid system-->
             <section class="container">
             <div class="row">
-                <div class="col">
+                <div class="col-5">
                     <p>THIS IS A SMMA AGENCY, Put simply, an SMMA, or Social Media Marketing Agency is a type of business that focuses on using social channels in an effective way of driving attention to clients businesses </p>
 
                 </div>
                 <!--columnas-->
-               <div class="col">
+               <div class="col-7">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -72,6 +72,12 @@
                       <div class="carousel-item">
                         <img src="img/3.jpg" class="d-block w-100" alt="...">
                       </div>
+                      <div class="carousel-item">
+                        <img src="img/4.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="img/5.jpg" class="d-block w-100" alt="...">
+                      </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -82,6 +88,7 @@
                       <span class="visually-hidden">Next</span>
                     </button>
                   </div>
+                
 
                </div>
             
