v.8 personal webpage porfolio

--- a/template1.html
+++ b/template1.html
@@ -55,12 +55,12 @@
             <!--grid system-->
             <section class="container">
             <div class="row">
-                <div class="col-5">
-                    <p>THIS IS A SMMA AGENCY, Put simply, an SMMA, or Social Media Marketing Agency is a type of business that focuses on using social channels in an effective way of driving attention to clients businesses </p>
-
+                <div class="col-6">
+                    <p>It is a personalized landing page for a content creator client who maintains contact with his followers and sponsors.</p>
+                    <p>The idea is to be able to offer products and services to your followers and receive offers from sponsors through data storage.</p>
                 </div>
                 <!--columnas-->
-               <div class="col-7">
+               <div class="col-6">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
