v.12 personal webpage porfolio

--- a/template2.html
+++ b/template2.html
@@ -56,9 +56,11 @@
             <section class="container">
             <div class="row">
                 <div class="col-5">
-                    <p>It is a personalized landing page for a content creator client who maintains contact with his followers and sponsors.</p>
-                    <p>The idea is to be able to offer products and services to your followers and receive offers from sponsors through data storage.</p>
-                </div>
+                    <p>It is a watch store focused on classic and ostentatious designs 
+                      with a wide variety of styles and options.</p></br>
+                      
+                      <p>Custom designed based on customer needs, providing personalized advice focused on positioning  through SEO position.</p>
+                </div>  
                 <!--columnas-->
                <div class="col-7">
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
