--- a/template1.html
+++ b/template1.html
@@ -64,19 +64,19 @@
                 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="img/1.jpg" class="d-block w-100" alt="...">
+                        <img src="img/template 1/1.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="img/2.jpg" class="d-block w-100" alt="...">
+                        <img src="img/template 1/2.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="img/3.jpg" class="d-block w-100" alt="...">
+                        <img src="img/template 1/3.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="img/4.jpg" class="d-block w-100" alt="...">
+                        <img src="img/template 1/4.jpg" class="d-block w-100" alt="...">
                       </div>
                       <div class="carousel-item">
-                        <img src="img/5.jpg" class="d-block w-100" alt="...">
+                        <img src="img/template 1/5.jpg" class="d-block w-100" alt="...">
                       </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
