v.17 personal webpage porfolio

--- a/template 4.html
+++ b/template 4.html
@@ -56,10 +56,10 @@
             <section class="container">
             <div class="row">
                 <div class="col-5">
-                    <p>It is a watch store focused on classic and ostentatious designs 
-                      with a wide variety of styles and options.</p></br>
+                    <p>
+                      Landing page of a restaurant focused on the various types of meat with an exquisite touch in the roast, with the greatest experts in the kitchen</p></br>
                       
-                      <p>Custom designed based on customer needs, providing personalized advice focused on positioning  through SEO position.</p>
+                      
                 </div>  
                 <!--columnas-->
                <div class="col-7">
