v.18 personal webpage porfolio

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <p class="bienvenida">WELCOME</p>
                 <h2>I'm <span>Gabriel Ramirez</span>,Web Analyst and Developer.</h2>
                 <p class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit, Soluta. </p>
-                <a href="#portfolio">Go to portfolio</a>
+                <a   href="#portfolio">Go to portfolio</a>
             </div>
         </div>
     </section>
@@ -82,7 +82,7 @@
             <p></p>
        
           
-            <a href="../HOJA DE VIDA GABRIEL RAMIREZ.pdf">CV DOWNLOAD</a>
+            <a   download="Hoja de vida" href="HOJA DE VIDA GABRIEL RAMIREZ 4.0.pdf">CV DOWNLOAD</a>
         </div>
     </section>
 
