v.20 personal webpage porfolio

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="fila">
             <div class="proyecto">
                 <div class="overlay"></div>
-                <a class="test" href=""><img src="img/proyecto1.jpg" alt=""></a>
+                <a class="test" href="template1.html"><img src="img/proyecto1.jpg" alt=""></a>
                 <div class="info">
                     <h4>Fundacion animales</h4>
                     <p>Diseño Web</p>
@@ -218,7 +218,7 @@
             </div>
             <div class="proyecto">
                 <div class="overlay"></div>
-                <img src="img/proyecto2.jpg" alt="">
+                <a class="test" href="template2.html"><img src="img/proyecto1.jpg" alt=""></a>
                 <div class="info">
                     <h4>Descripcion Proyecto</h4>
                     <p>Diseño Web</p>
