--- a/template 4.html
+++ b/template 4.html
@@ -23,7 +23,7 @@
                     <h1>/GR/</h1>
                     <nav id="nav" class="">
                         <ul id="links">
-                            <li><a href="#inicio" class="seleccionado" onclick="seleccionar(this)">HOME</a></li>
+                            <li><a href="index.html" class="seleccionado" onclick="seleccionar(this)">HOME</a></li>
                             <li><a href="#sobremi" onclick="seleccionar(this)">ABOUT ME</a></li>
                             <li><a href="#servicios" onclick="seleccionar(this)">SERVICES</a></li>
                             <li><a href="#portfolio" onclick="seleccionar(this)">PORTFOLIO</a></li>
