v.23 personal webpage porfolio

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p></p>
        
           
-            <a   download="Hoja de vida" href="HOJA DE VIDA GABRIEL RAMIREZ 5.0.pdf">CV DOWNLOAD</a>
+            <a   download="Hoja de vida" href="HOJA DE VIDA GABRIEL RAMIREZ.pdf">CV DOWNLOAD</a>
         </div>
     </section>
 
