v.24 personal webpage porfolio

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <div class="fila">
             <div class="proyecto">
                 <div class="overlay"></div>
-                <a class="test" href="template2.html"><img src="img/proyecto1.jpg" alt=""></a>
+                <a class="test" href="template2.html"><img src="img/template 2/template2.PNG" alt=""></a>
                 <div class="info">
                     <h4>Fundacion animales</h4>
                     <p>Diseño Web</p>
@@ -218,7 +218,7 @@
             </div>
             <div class="proyecto">
                 <div class="overlay"></div>
-                <a class="test" href="template3.html"><img src="img/proyecto1.jpg" alt=""></a>
+                <a class="test" href="template3.html"><img src="img/template 3/template3.PNG" alt=""></a>
                 <div class="info">
                     <h4>Descripcion Proyecto</h4>
                     <p>Diseño Web</p>
@@ -226,7 +226,7 @@
             </div>
             <div class="proyecto">
                 <div class="overlay"></div>
-                <a class="test" href="template4.html"><img src="img/proyecto1.jpg" alt=""></a>
+                <a class="test" href="template4.html"><img src="img/template 4/template4.PNG" alt=""></a>
                 <div class="info">
                     <h4>Descripcion Proyecto</h4>
                     <p>Diseño Web</p>
