v.26 personal webpage porfolio

--- a/template4.html
+++ b/template4.html
@@ -24,10 +24,10 @@
                     <nav id="nav" class="">
                         <ul id="links">
                             <li><a href="index.html" class="seleccionado" onclick="seleccionar(this)">HOME</a></li>
-                            <li><a href="#sobremi" onclick="seleccionar(this)">ABOUT ME</a></li>
-                            <li><a href="#servicios" onclick="seleccionar(this)">SERVICES</a></li>
-                            <li><a href="#portfolio" onclick="seleccionar(this)">PORTFOLIO</a></li>
-                            <li><a href="#contacto" onclick="seleccionar(this)">CONTACT</a></li>
+                            <li><a href="index.html" onclick="seleccionar(this)">ABOUT ME</a></li>
+                            <li><a href="index.html" onclick="seleccionar(this)">SERVICES</a></li>
+                            <li><a href="index.html" onclick="seleccionar(this)">PORTFOLIO</a></li>
+                            <li><a href="index.html" onclick="seleccionar(this)">CONTACT</a></li>
                         </ul>
                     </nav>
 
