v.27 personal webpage porfolio

--- a/index.html
+++ b/index.html
@@ -242,16 +242,16 @@
     <section id="contacto">
         <h3 class="titulo-seccion">Contact Us</h3>
         <div class="contenedor-form">
-            <form action="">
+            <form action="https://formsubmit.co/your@email.com" method="POST">
                 <div class="fila mitad">
-                    <input type="text" placeholder="Nombre Completo *" class="input-mitad">
-                    <input type="email" placeholder="Dirección de Email" class="input-mitad">
+                    <input type="text" placeholder="Full Name...  *" class="input-mitad" name="fullname">
+                    <input type="email" placeholder="Email Address..." class="input-mitad" name="emailaddress">
                 </div>
                 <div class="fila">
-                    <input type="text" placeholder="Tema..." class="input-full">
+                    <input type="text" placeholder="Subject..." class="input-full" name="subject">
                 </div>
                 <div class="fila">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Tu Mensaje..." class="input-full"></textarea>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Your Message..." class="input-full"></textarea>
                 </div>
 
                 <input type="submit" value="Send Message" class="btn-enviar">
