--- a/index.html
+++ b/index.html
@@ -244,14 +244,14 @@
         <div class="contenedor-form">
             <form action="https://formsubmit.co/gabrielempleo2003@gmail.com" method="POST">
                 <div class="fila mitad">
-                    <input type="text" placeholder="Full Name...  *" class="input-mitad" name="fullname">
-                    <input type="email" placeholder="Email Address..." class="input-mitad" name="emailaddress">
+                    <input type="text" placeholder="Full Name...  *" class="input-mitad" name="Full-Name">
+                    <input type="email" placeholder="Email Address..." class="input-mitad" name="Email-Address">
                 </div>
                 <div class="fila">
-                    <input type="text" placeholder="Subject..." class="input-full" name="subject">
+                    <input type="text" placeholder="Subject..." class="input-full" name="Subject">
                 </div>
                 <div class="fila">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Your Message..." class="input-full"></textarea>
+                    <textarea id="" cols="30" rows="10" placeholder="Your Message..." class="input-full" name="Comments"></textarea>
                 </div>
 
                 <input type="submit" value="Send Message" class="btn-enviar">
