v.30 personal webpage porfolio

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
         <h3>SKILLS </h3>
         <div class="skill">
             <div class="info">
-                <p> <span class="lista"> </span>Html & Css</p>
-                <span class="porcentaje">95%</span>
+                <p> <span class="lista"> </span>DATABASES</p>
+                <span class="porcentaje">90%</span>
             </div>
 
             <div class="barra">
@@ -174,8 +174,8 @@
         </div>
         <div class="skill">
             <div class="info">
-                <p> <span class="lista"> </span>Javascript</p>
-                <span class="porcentaje">90%</span>
+                <p> <span class="lista"> </span>EXCEL</p>
+                <span class="porcentaje">85%</span>
             </div>
 
             <div class="barra">
@@ -184,7 +184,7 @@
         </div>
         <div class="skill">
             <div class="info">
-                <p> <span class="lista"> </span>Databases</p>
+                <p> <span class="lista"> </span>FRONT-END</p>
                 <span class="porcentaje">90%</span>
             </div>
 
@@ -194,8 +194,8 @@
         </div>
         <div class="skill">
             <div class="info">
-                <p> <span class="lista"> </span>Php</p>
-                <span class="porcentaje">85%</span>
+                <p> <span class="lista"> </span>BACK-END</p>
+                <span class="porcentaje">80%</span>
             </div>
 
             <div class="barra">
