v.31 personal webpage porfolio

--- a/template4.html
+++ b/template4.html
@@ -57,7 +57,7 @@
             <div class="row">
                 <div class="col-5">
                     <p>
-                      Landing page of a restaurant focused on the various types of meat with an exquisite touch in the roast, with the greatest experts in the kitchen</p></br>
+                      Landing page of a restaurant focused on the various types of meat with an exquisite touch in the roast, with the greatest experts in the kitchen.</p></br>
                       
                       
                 </div>  
