--- a/template3.html
+++ b/template3.html
@@ -56,7 +56,7 @@
             <section class="container">
             <div class="row">
                 <div class="col-5">
-                    <p> Landing Webpage delicate minimalist design for gold and beige handmade jewelry</p></br>
+                    <p> Landing Webpage delicate minimalist design for gold and beige handmade jewelry.</p></br>
                       
                       Custom designed based on customer needs, providing personalized advice focused on positioning  through SEO position.</p>
                 </div>  
