v.32 personal webpage porfolio

--- a/index.html
+++ b/index.html
@@ -255,6 +255,8 @@
                 </div>
 
                 <input type="submit" value="Send Message" class="btn-enviar">
+                <input type="hidden" name="_next" value="index.html">
+                <input type="hidden" name="_captcha" value="false">
             </form>
         </div>
     </section>
