v.33 personal webpage porfolio

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <section id="contacto">
         <h3 class="titulo-seccion">Contact Us</h3>
         <div class="contenedor-form">
-            <form action="https://formsubmit.co/gabrielempleo2003@gmail.com" method="POST">
+            <form action="https://formsubmit.co/931540a8e8d54bb8da04c16759023520" method="POST">
                 <div class="fila mitad">
                     <input type="text" placeholder="Full Name...  *" class="input-mitad" name="Full-Name">
                     <input type="email" placeholder="Email Address..." class="input-mitad" name="Email-Address">
@@ -255,7 +255,7 @@
                 </div>
 
                 <input type="submit" value="Send Message" class="btn-enviar">
-                <input type="hidden" name="_next" value="index.html">
+                <input type="hidden" name="_next" value="localhost/WEBPAGE-PROFILE">
                 <input type="hidden" name="_captcha" value="false">
             </form>
         </div>
