v.34 personal webpage porfolio

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
                     <div class="redes">
-                        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://wa.me/573026009099?text=Hola%20Gabriel%20Ramirez%20hemos%20visto%20tu%20perfil%20y%20nos%20ha%20llamado%20la%20atención"><i class="fa-brands fa-whatsapp"></i></i></i</a>
                         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                         <a href=""> <i class="fa-brands fa-github"></i></a>
                    
@@ -268,7 +268,8 @@
             <a href="#"><i class="fa-brands fa-youtube"></i></i></a>
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
-            <a href="#"><i class="fa-brands fa-whatsapp"></i></i></i></a>
+            <a href="https://wa.me/573026009099?text=Hola"><i class="fa-brands fa-whatsapp"></i></i></i</a>
+
         </div>
 
     </footer>
