--- a/index.html
+++ b/index.html
@@ -268,8 +268,7 @@
             <a href="#"><i class="fa-brands fa-youtube"></i></i></a>
             <a href="#"><i class="fa-brands fa-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
-            <a href="https://wa.me/573026009099?text=Hola"><i class="fa-brands fa-whatsapp"></i></i></i</a>
-
+            <a href="https://wa.me/573026009099?text=Hola%20Gabriel%20Ramirez%20hemos%20visto%20tu%20perfil%20y%20quisieramos%20contactar%20contigo"><i class="fa-brands fa-whatsapp"></i></i></i</a>
         </div>
 
     </footer>
