v.44 personal webpage porfolio

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- SECCION S O B R E M I -->
     <section id="sobremi">
         <div class="contenedor-foto">
-            <img src="./img/imagen1.PNG">
+            <img src="./img/imagen1.png">
             
            
         </div>
