Agregado Google Tag Manager v.2

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                     <nav id="nav" class="">
                         <ul id="links">
                             <li><a href="#inicio" class="seleccionado" onclick="seleccionar(this)">HOME</a></li>
-                            <li><a href="#sobremi" onclick="seleccionar(this)">ABOUT ME</a></li>
-                            <li><a href="#servicios" onclick="seleccionar(this)">SERVICES</a></li>
-                            <li><a href="#portfolio" onclick="seleccionar(this)">PORTFOLIO</a></li>
-                            <li><a href="#contacto" onclick="seleccionar(this)">CONTACT</a></li>
+                            <li><a href="#sobremi" class="seleccionado" onclick="seleccionar(this)">ABOUT ME</a></li>
+                            <li><a href="#servicios" class="seleccionado" onclick="seleccionar(this)">SERVICES</a></li>
+                            <li><a href="#portfolio" class="seleccionado" onclick="seleccionar(this)">PORTFOLIO</a></li>
+                            <li><a href="#contacto" class="seleccionado" onclick="seleccionar(this)">CONTACT</a></li>
                         </ul>
                     </nav>
 
